notfication history and api to schedule notification
